WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198139
Fix scrolling tree state for more obscure combinations of positioning and paint order
https://bugs.webkit.org/show_bug.cgi?id=198139
Summary
Fix scrolling tree state for more obscure combinations of positioning and pai...
Simon Fraser (smfr)
Reported
2019-05-22 14:45:10 PDT
Fix scrolling tree state for more obscure combinations of positioning and paint order
Attachments
Patch
(22.27 KB, patch)
2019-05-22 14:50 PDT
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-05-22 14:50:19 PDT
Created
attachment 370447
[details]
Patch
Antti Koivisto
Comment 2
2019-05-22 15:08:35 PDT
Comment on
attachment 370447
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=370447&action=review
> Source/WebCore/rendering/RenderLayerCompositor.cpp:1800 > +// This is a simplified version of containing block walking that only handles absolute position. > +static AncestorTraversal traverseAncestorLayers(const RenderLayer& layer, const WTF::Function<AncestorTraversal(const RenderLayer&, bool inContainingBlockChain, bool isPaintOrderAncestor)>& ancestorFunc)
Using template argument instead of WTF::Function would avoid unnecessary virtual function calls.
Simon Fraser (smfr)
Comment 3
2019-05-22 15:58:43 PDT
https://trac.webkit.org/r245656
Radar WebKit Bug Importer
Comment 4
2019-05-22 15:59:25 PDT
<
rdar://problem/51046303
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug